--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
+    "emailjs-com": "^3.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
