--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
-    "start": "react-scripts start",
+    "server": "npm start --workspace=server",
+    "client": "npm start --workspace=client",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
