--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
+    "howler": "^2.2.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
