--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.8",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
