--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "emailjs-com": "^3.2.0",
     "howler": "^2.2.3",
     "moment": "^2.29.4",
+    "radio-browser-api": "^6.0.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
