--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.11.13",
+    "@react-oauth/google": "^0.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +28,7 @@
     "react-big-calendar": "^1.6.8",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-h5-audio-player": "^3.8.6",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
