--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.3",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "concurrently": "^7.6.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
@@ -68,5 +69,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
