--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-API_URL = 'api'
-MONGODB_URI = "mongodb+srv://nathanielgrandinette:somepassword1234@cluster0.u1htjf0.mongodb.net/Agenda-X-Productivity?retryWrites=true"
-JWT_SECRET = "fjfkdjsoaijeo238u92jkrjeekjwl",
+API_URL='api'
+MONGODB_URI="mongodb+srv://nathanielgrandinette:somepassword1234@cluster0.u1htjf0.mongodb.net/Agenda-X-Productivity?retryWrites=true"
+JWT_SECRET="fjfkdjsoaijeo238u92jkrjeekjwl",
+PORT=3001
       
