npm run build for AWS

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,11 @@
-API_URL='api'
-MONGODB_URI="mongodb+srv://nathanielgrandinette:somepassword1234@cluster0.u1htjf0.mongodb.net/Agenda-X-Productivity?retryWrites=true"
-JWT_SECRET="fjfkdjsoaijeo238u92jkrjeekjwl",
-PORT=3001
+export API_URL='api'
+export MONGODB_URI="mongodb+srv://nathanielgrandinette:somepassword1234@cluster0.u1htjf0.mongodb.net/Agenda-X-Productivity?retryWrites=true"
+export JWT_SECRET="fjfkdjsoaijeo238u92jkrjeekjwl",
+export PORT=3001
+export REACT_APP_API_URL='/api' 
+export REACT_APP_EMAIL_KEY='pjlYxQ6jLWiRuqeFA'
+export REACT_APP_CALENDAR_SCOPES='https://www.googleapis.com/auth/calendar.events'
+export REACT_APP_CALENDAR_API='AIzaSyA1K7VqJWBklsYJnUJxC2mKSkHqeOBpDiY'
+export REACT_APP_CALENDAR_DISCOVERY_DOCS="https://content.googleapis.com/discovery/v1/apis/calendar/v3/rest"
+export REACT_APP_CALENDAR_CLIENT_ID="391972270506-tkc1n8d8setttid80mf8c78fmag5gcei.apps.googleusercontent.com"
       
