Fixing max memory issue

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "react-scripts build"
+    "build": "react-scripts --max_old_space_size=512 build"
   },
   "author": "",
   "license": "ISC"
