--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "react-scripts --max_old_space_size=512 build"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "author": "",
   "license": "ISC"
 }
