--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "server": "npm start --workspace=server",
     "client": "npm start --workspace=client",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "build": "concurrently --kill-others-on-fail \"npm run build client\" \"npm run build server\"",
+    "build": "npm run build --workspace=client && npm run build --workspace=server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
